feat: add artifact cursor pagination
